--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     crossorigin="anonymous"></script>
 
 
-  <script src="game-display.js" type="module"></script>
-  <script src="game-user-actions.js" type="module"></script>
+  <script src="main.js" type="module"></script>
+  
   <!--<script src="game-user-actions.js"></script>
   <script src="game-display.js"></script>
   <script src="index.js"></script>-->
